[package]
name = "librfs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["ess", "fuse", "pool", "db", "utils"]

[lib]
name = "rfs"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "rfsd"
path = "src/main.rs"

[dependencies]
rfs-ess = { path = "ess" }
rfs-utils = { path = "utils" }
rfs-pool = { path = "pool" }
rfs-fuse = { path = "fuse" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
axum = "0.8.4"