[package]
name = "librfs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["utils", "ess", "pool", "fuse", "db"]

[lib]
name = "librfs"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "rfsd"
path = "src/main.rs"

[dependencies]
rfs-ess = { path = "ess" }
rfs-utils = { path = "utils" }
rfs-pool = { path = "pool" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
axum = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
hex = "0.4.3"
thiserror = "2.0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = "0.9"
regex = "1"
unicode-segmentation = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"
futures = "0.3.31"
